Removing highlight of video registers (now dictionary words)

--- a/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
+++ b/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
@@ -3,8 +3,8 @@ main:
   messages:
   - remember how games write to VRAM?
   - <{PPUAddr_PPUData.png}>
-  - they also can <read> from VRAM, by reading from 📦  ~PPUData~ instead of writing
-  - "this operation also increments the address in 📍  ~PPUAddr~, and has a little quirk:"
+  - they also can <read> from VRAM, by reading from 📦  PPUData instead of writing
+  - "this operation also increments the address in 📍  PPUAddr, and has a little quirk:"
   - all reads are <delayed> by 1, except for the Palette RAM section and its mirrors
   responses:
   - how can we implement the delay? ⌛ [delay]
