--- a/src/data/levels/05b_PPU/12_OAM bridge/chat/es.yml
+++ b/src/data/levels/05b_PPU/12_OAM bridge/chat/es.yml
@@ -9,8 +9,8 @@ main:
 how:
   messages:
   - "hay dos maneras:"
-  - "1) usando los registros 🏠  ~OAMAddr~ y 📝  ~OAMData~"
-  - "2) usando ⚡  ~OAMDMA~"
+  - "1) usando los registros 🏠  OAMAddr y 📝  OAMData"
+  - "2) usando ⚡  OAMDMA"
   responses:
   - cuéntame sobre 🏠  OAMAddr y 📝  OAMData [addrdata]
   - cuéntame sobre ⚡  OAMDMA [dma]
@@ -19,7 +19,7 @@ how:
 addrdata:
   messages:
   - no hay mucho que decir sobre ellos
-  - es lo mismo que 📍  ~PPUAddr~ y 📦  ~PPUData~
+  - es lo mismo que 📍  PPUAddr y 📦  PPUData
   - pero acceden a 🐏  OAM RAM en lugar de la memoria PPU
   responses:
   - ...how
@@ -27,7 +27,7 @@ addrdata:
 dma:
   messages:
   - DMA ("Direct Memory Access") es un mecanismo de hardware para copiar bytes de una región de memoria a otra muy rápidamente
-  - en el NEEES, esto se proporciona mediante el registro ⚡  ~OAMDMA~, que permite a los juegos llenar 🐏  OAM RAM copiando bytes de la memoria de la CPU
+  - en el NEEES, esto se proporciona mediante el registro ⚡  OAMDMA, que permite a los juegos llenar 🐏  OAM RAM copiando bytes de la memoria de la CPU
   - escribir ```raw $```~XX~ en ese registro copiará 256 bytes de las direcciones CPU ```raw $```~XX~```raw 00```-```raw $```~XX~```raw FF``` a la OAM RAM interna
   - esta operación tomará alrededor de 513 ciclos de CPU, durante los cuales la CPU está suspendida
   responses:
