--- a/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/en.yml
+++ b/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/en.yml
@@ -9,7 +9,7 @@ how:
   messages:
   - it scans the entire OAM table, checking if each sprite should be drawn in the current scanline (based on ~x~, ~y~, and ~height~)
   - it chooses the first 8 sprites
-  - after finding 8 (the maximum number of sprites per scanline), if it finds <more> visible sprites, the 🏁  ~sprite overflow flag~ (bit 5 of 📊  ~PPUStatus~) is set to notify the error to the game developer
+  - after finding 8 (the maximum number of sprites per scanline), if it finds <more> visible sprites, the 🏁  ~sprite overflow flag~ (bit 5 of 📊  PPUStatus) is set to notify the error to the game developer
   - sprites with lower ids are rendered on top of sprites with higher ids, so you should reverse the chosen sprite list!
   responses:
   - ok I think I got it [ok]
