--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
@@ -1,6 +1,6 @@
 main:
   messages:
-  - now that our emulator is able to access 🛸 📖  ~OAM~
+  - now that our emulator is able to access 🛸 📖  OAM
   - we are ready to read 🛸  sprites!
   responses:
   - what's in OAM? [oam]
