--- a/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/en.yml
+++ b/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/en.yml
@@ -1,6 +1,6 @@
 main:
   messages:
-  - on each scanline, the sprite renderer performs a ~sprite evaluation~ 🕵️
+  - on each scanline, the sprite renderer performs a sprite evaluation 🕵️
   - it prepares the sprites that need to be rendered
   responses:
   - mhm... how does it do it? [how]
@@ -9,7 +9,7 @@ how:
   messages:
   - it scans the entire OAM table, checking if each sprite should be drawn in the current scanline (based on ~x~, ~y~, and ~height~)
   - it chooses the first 8 sprites
-  - after finding 8 (the maximum number of sprites per scanline), if it finds <more> visible sprites, the 🏁  ~sprite overflow flag~ (bit 5 of 📊  PPUStatus) is set to notify the error to the game developer
+  - after finding 8 (the maximum number of sprites per scanline), if it finds <more> visible sprites, the 🏁  sprite overflow flag (bit 5 of 📊  PPUStatus) is set to notify the error to the game developer
   - sprites with lower ids are rendered on top of sprites with higher ids, so you should reverse the chosen sprite list!
   responses:
   - ok I think I got it [ok]
@@ -21,16 +21,16 @@ ok:
     **_evaluate()**:
       **->** defines a `sprites` array
       **->** for each possible sprite id (~0-63~):
-        **->** creates a sprite using ```javascript this._createSprite(...)```
-        **->** if the sprite should render in the current scanline, and `sprites` has less than 9 items:
+        **->** creates a `sprite` using ```javascript this._createSprite(...)```
+        **->** if the `sprite` should render in the current scanline, and `sprites` has less than 9 items:
           **->** if `sprites` has less than 8 items:
-            **->** pushes to `sprites`
+            **->** pushes `sprite` to the `sprites` array
           **->** else:
             **->** sets ```javascript this.ppu.registers.ppuStatus.spriteOverflow = 1```
             **->** stops looping
       **->** returns `sprites` in reversed order
   - 📚  also, you need to reset `spriteOverflow` to 0 on ~scanline=-1; cycle=1~, like you previously did with `isInVBlankInterval`
-  - 📚  do it in `PPU::_onPreLine()`
+  - do it in `PPU::_onPreLine()`
   responses:
   - how do I know if a sprite should be rendered? [visible]
 
