Adding tile id, pattern table id, palette id, and sprite id dictionary entries

--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
@@ -54,7 +54,7 @@ spritesize:
 
 patterntable:
   messages:
-  - in ~8x8~ mode, the ~tile id~ is `byte1` of the OAM entry, and the ~pattern table id~ is ```javascript ppu.registers.ppuCtrl.sprite8x8PatternTableId```
-  - in ~8x16~ mode, the ~tile id~ is ```javascript (byte1 & 0b11111110)``` and the ~pattern table id~ is ```javascript (byte1 & 0b00000001)```
+  - in ~8x8~ mode, the tile id is `byte1` of the OAM entry, and the pattern table id is ```javascript ppu.registers.ppuCtrl.sprite8x8PatternTableId```
+  - in ~8x16~ mode, the tile id is ```javascript (byte1 & 0b11111110)``` and the pattern table id is ```javascript (byte1 & 0b00000001)```
   responses:
   - ...implement
