Adding sprite-0 hit definitions

--- a/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/en.yml
+++ b/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/en.yml
@@ -45,7 +45,7 @@ easy:
   - what pattern table should I use? [patterntable]
   - what tile id should I use? [tileid]
   - how can I get the palette colors? [palette]
-  - what X and Y should I use when plotting pixels? [coordinates]
+  - what ~X~ and ~Y~ should I use when plotting pixels? [coordinates]
   - what color should I use when plotting pixels? [color]
 
 patterntable:
