--- a/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/es.yml
+++ b/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/es.yml
@@ -45,7 +45,7 @@ easy:
   - ¿qué pattern table debería usar? [patterntable]
   - ¿qué id de tile debería usar? [tileid]
   - ¿cómo puedo obtener los colores de la paleta? [palette]
-  - ¿qué X y Y debería usar al dibujar píxeles? [coordinates]
+  - ¿qué ~X~ y ~Y~ debería usar al dibujar píxeles? [coordinates]
   - ¿qué color debería usar al dibujar píxeles? [color]
 
 patterntable:
