--- a/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-0 hit/chat/es.yml
+++ b/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-0 hit/chat/es.yml
@@ -1,8 +1,8 @@
 main:
   messages:
-  - el hardware tiene un mecanismo para detectar colisiones entre el primer sprite en OAM (sprite 0) y el fondo
-  - se llama <sprite-0 hit>, y se activa cuando un píxel opaco de <sprite 0> se superpone a un píxel opaco del fondo
-  - cuando eso ocurre, la PPU establece la bandera de sprite-0 hit en 📊  `PPUStatus` y los juegos pueden leerla
+  - el hardware tiene un mecanismo para detectar colisiones entre el primer sprite en OAM (sprite cero) y el fondo
+  - se llama sprite-zero hit, y se activa cuando un píxel opaco del sprite cero se superpone a un píxel opaco del fondo
+  - cuando eso ocurre, la PPU establece la bandera de sprite-zero hit en 📊  `PPUStatus` y los juegos pueden leerla
   responses:
   - ¿para qué se utiliza? [usage]
 
@@ -10,7 +10,7 @@ usage:
   messages:
   - los juegos lo utilizan para realizar <efectos de pantalla dividida> (por ejemplo, tener un HUD estático en la parte superior y un fondo desplazándose en la parte inferior)
   - había un juego de un plomero que usaba ese truco 👨 🔧
-  - al colocar el sprite 0 en una posición específica en el fondo, la PPU activa un sprite-0 hit cuando esa parte de la pantalla se renderiza
+  - al colocar el sprite cero en una posición específica en el fondo, la PPU activa un sprite-zero hit cuando esa parte de la pantalla se renderiza
   - esto permite a los juegos detectar el momento en que la PPU alcanza una scanline específica, y luego cambiar las coordenadas de scrolling a mitad del frame
   responses:
   - aaah [aahh]
@@ -19,7 +19,7 @@ aahh:
   messages:
   - |-
     📚  en `SpriteRenderer`, modifica el método `_render(...)`; debajo de `buffer[x] = ...`, agrega:
-    **->** si el `sprite.id` es 0 Y el píxel de fondo en ~(x, y)~ es opaco:
+    **->** si el `sprite.id` es 0 <Y> el píxel de fondo en ~(x, y)~ es opaco:
       **->** asigna ```javascript this.ppu.registers.ppuStatus.sprite0Hit = 1```
   - 📚  ah, y reinicia `sprite0Hit` en `PPU::_onPreLine()`, ¡igual que hiciste con las otras dos banderas!
   responses: []
