--- a/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-0 hit/chat/en.yml
+++ b/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-0 hit/chat/en.yml
@@ -1,8 +1,8 @@
 main:
   messages:
-  - the hardware has a mechanism to detect collisions between the first sprite in OAM (sprite 0) and the background
-  - it's called the <sprite-0 hit>, and it's triggered when an opaque pixel of <sprite 0> overlaps an opaque pixel of the background
-  - when that happens, the PPU sets the sprite-0 hit flag in 📊  `PPUStatus` and games can read it
+  - the hardware has a mechanism to detect collisions between the first sprite in OAM (sprite zero) and the background
+  - it's called the sprite-zero hit, and it's triggered when an opaque pixel of the sprite zero overlaps an opaque pixel of the background
+  - when that happens, the PPU sets the sprite-zero hit flag in 📊  `PPUStatus` and games can read it
   responses:
   - what's it used for? [usage]
 
@@ -10,7 +10,7 @@ usage:
   messages:
   - games use it to perform <split-screen effects> (for example, having a static HUD at the top and a scrolling background at the bottom)
   - there was a game about a plumber that used that trick 👨 🔧
-  - by placing sprite 0 at a specific position in the background, the PPU would trigger a sprite-0 hit when that part of the screen was rendered
+  - by placing sprite zero at a specific position in the background, the PPU would trigger a sprite-zero hit when that part of the screen was rendered
   - this allows games to detect the moment the PPU has reached a specific scanline, and then change the scroll coordinates mid-frame
   responses:
   - aahh [aahh]
@@ -19,7 +19,7 @@ aahh:
   messages:
   - |-
     📚  in `SpriteRenderer`, change the `_render(...)` method; below `buffer[x] = ...`, add:
-    **->** if the `sprite.id` is 0 AND the background pixel in ~(x, y)~ is opaque:
+    **->** if the `sprite.id` is 0 <AND> the background pixel in ~(x, y)~ is opaque:
       **->** sets ```javascript this.ppu.registers.ppuStatus.sprite0Hit = 1```
   - 📚  ah, and reset `sprite0Hit` in `PPU::_onPreLine()`, just like you did with the other two flags!
   responses: []
