--- a/src/data/levels/05b_PPU/20_Mirroring 2-2 - Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/20_Mirroring 2-2 - Name tables/chat/es.yml
@@ -1,6 +1,6 @@
 main:
   messages:
-  - el mapa de memoria de la PPU tiene una sección dedicada para 4 name tables, en ~PPU $2000-$2FFF~
+  - el mapa de memoria de la PPU tiene una sección dedicada para 4 name tables, en $PPU $2000-$2FFF
   - cada name table es de 1024 bytes (o $400 en hexadecimal), por lo que estas 4 tablas están en las direcciones $2000, $2400, $2800 y $2C00
   - pero el hardware real de la NEEES solo tiene VRAM para <dos> de ellas
   - lo que termina sucediendo es que el mapper espeja las otras de formas divertidas ✨
